@@ -1,3 +1,9 @@
+2020-03-07 Marek M. Cel <marekcel@marekcel.pl>
+    
+    * Qt Installer Framework config files and scripts
+
+
+
 2020-03-01 Marek M. Cel <marekcel@marekcel.pl>
 
     * C-130 and P-51 landing gear aerodynamics
